--- a/examples/soapy.html
+++ b/examples/soapy.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<h1>
-		<div class="container"><i class="fa-solid fa-arrow-right-long"></i><a href="homepage.html">
+		<div class="container"><i class="fa-solid fa-arrow-right-long"></i><a href="../homepage.html">
 			<span class="link"></span>
 		  </a></div>
 		<div class="container1"><i class="fa-solid fa-arrow-left-long"></i><a href="lego.html">
