--- a/examples/song.html
+++ b/examples/song.html
@@ -20,10 +20,10 @@
 		<div class="container2"><i class="fa-solid fa-house"></i><a href="../homepage.html">
 			<span class="link"></span>
 		  </a></div></h1>
-		  <div class="container3"><i class="fa fa-music"></i><a href="https://soundcloud.com/preetika-sastry/take-on-me/s-tbjZ11bFLCT?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+		  <div class="container3">Play Song --> <a href="https://soundcloud.com/preetika-sastry/take-on-me/s-tbjZ11bFLCT?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
 			<span class="link"></span>
 		  </a></div>
-		<section<div color="dark green" height="100%", width="100px"></div></section>
+		
 		
 		
 
